--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "template"
   ],
   "author": "dncgmh",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "dependencies": {
     "@decorators/di": "^1.0.3",
     "@decorators/express": "^2.5.0",
